feat: use jdk21
Former-commit-id: 4a7636f95f2260e3ab5adcd9d07a2d7c2a34d5e5